fix: move state machine code to autora module

--- a/autora/cycle/state_machine.ipynb
+++ b/autora/cycle/state_machine.ipynb
@@ -6,10 +6,7 @@
     "# State machine proof of concept"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -25,10 +22,7 @@
     "_logger = logging.getLogger(__name__)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -37,10 +31,7 @@
     "The model we choose is one where the states are \"static\" – nothing changes when we are in a state. As such, the state has only one attribute: a name."
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -53,10 +44,7 @@
     "    name: str"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -65,10 +53,7 @@
     "Before we can take a transition, we need to check whether it is allowed. For each state transition, there may be a condition. If the user doesn't want to specify a transition condition, then the transition is always allowed."
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -85,10 +70,7 @@
     "    return True"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -97,10 +79,7 @@
     "The transitions are dynamic: during a transition, the state changes and the data may change too. We therefore allow a transition callback function which can operate on some data provided by the state machine. Again, if the user doesn't want to specify a transition callback, the data are returned unchanged."
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -117,10 +96,7 @@
     "    return data"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -129,10 +105,7 @@
     "Now we can define the transition itself. It has a starting state, ending state, the `TransitionCondition` function to check whether it is allowed and the `TransitionCallback` function to update the data."
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -149,10 +122,7 @@
     "    callback: TransitionCallback = default_transition_callback"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -161,10 +131,7 @@
     "To ensure that the state machine can be run in parallel without the risk of unexpected overwriting, we always ensure that the data, if they are provided, are frozen. The user can define their own data type to hold their application results, we provide only a minimum object as an example."
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -177,10 +144,7 @@
     "    pass"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -200,10 +164,7 @@
     "- We can take a \"step\" to find the first allowed transition from the current state and carry it out, executing the callback function."
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -263,10 +224,7 @@
     "        self.current_state = transition.state2"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -276,10 +234,7 @@
     "We initialize an empty state machine, and add two states with a single transition."
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -310,10 +265,7 @@
     "trivial_machine"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -322,10 +274,7 @@
     "The machine is in the starting state:"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -344,10 +293,7 @@
     "print(trivial_machine.current_state)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -356,10 +302,7 @@
     "Now we can run one step:"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -379,10 +322,7 @@
     "print(trivial_machine.current_state)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -391,10 +331,7 @@
     "If we try to step once more, the machine raises an exception (as is the pythonic way)."
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -416,10 +353,7 @@
     "    print(f\"{exception=}\")"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -429,10 +363,7 @@
     "We initalize an empty state machine, to which states and transitions can be added."
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -443,10 +374,7 @@
     "machine = StateMachine()"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -455,10 +383,7 @@
     "In this machine, we have three states which we register to the machine."
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -475,10 +400,7 @@
     "machine.register_state(state_new_data)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -487,10 +409,7 @@
     "There are three transitions, which we also register to the machine."
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -519,10 +438,7 @@
     "machine.register_transition(transition_experiment_runner)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -531,10 +447,7 @@
     "We set the current state of the machine once."
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -545,10 +458,7 @@
     "machine.set_current_state(state_new_experiment)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -557,10 +467,7 @@
     "The machine looks as follows:"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -580,10 +487,7 @@
     "machine"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -592,10 +496,7 @@
     "Now we can run a few steps, and see what happens to the machine."
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -625,10 +526,7 @@
     "    print(machine.current_state)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -637,10 +535,7 @@
     "As we see, it cycles through the states as expected."
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -649,10 +544,7 @@
     "## Add an additional state and new transitions to the simple machine\n"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -682,10 +574,7 @@
     "machine_with_additional_step.register_transition(transition_run_validated_experiment)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -715,10 +604,7 @@
     "    print(machine_with_additional_step.current_state)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -727,10 +613,7 @@
     "## Add additional data / metadata to a simple machine"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -759,10 +642,7 @@
     "trivial_machine.register_transition(transition_2)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -771,10 +651,7 @@
     "In the starting state, the value in the data is =1."
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -793,10 +670,7 @@
     "print(f\"{trivial_machine.data=}\")"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -806,10 +680,7 @@
     "The first, from state A to state B adds 2 to the value."
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    },
    "outputs": []
   },
@@ -830,10 +701,7 @@
     "print(f\"{trivial_machine.data=}\")"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -842,10 +710,7 @@
     "Then the second from state B to state A is \"-1\"..."
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -865,10 +730,7 @@
     "print(f\"{trivial_machine.data=}\")"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -877,10 +739,7 @@
     " ... and then the iteration starts from state A to state B again."
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -909,10 +768,7 @@
     "    print(f\"{trivial_machine.data=}\")"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -921,10 +777,7 @@
     "The initial value, and the results at each stage, are treated as immutable, so they can be passed around and used without the risk that the cycler will inadvertently change them."
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -943,10 +796,7 @@
     "print(f\"{initial_data=}\")"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -967,10 +817,7 @@
     "the_data_after_all_the_iterations_so_far"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -995,10 +842,7 @@
     "print(f\"the data we just saved:\\n{the_data_after_all_the_iterations_so_far=}\\nthe current value after {n=} more iterations:\\n{trivial_machine.data=}\")"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -1009,10 +853,7 @@
     "Here we start from the value -1234 and stop when the value gets to be over 0 by means of a condition which disallows all other transitions."
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -1043,10 +884,7 @@
     "stopping_machine.register_transition(transition_DC)\n"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -1076,10 +914,7 @@
     "print(f\"finished with: {stopping_machine.data=}\")"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -1090,10 +925,7 @@
     "The transfer to the stopping state is the first (highest priority) transition, but is only allowed when a condition is met."
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -1130,10 +962,7 @@
     "machine_with_stopped_state.register_transition(transition_DC)"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   },
   {
@@ -1160,25 +989,10 @@
     "    except StopIteration:\n",
     "        print(f\"machine stopped after {i=} iterations\")\n",
     "        break\n",
-    "print(f\"finished with: {machine_with_stopped_state.data=}\")"
+    "print(f\"finished with: {machine_with_stopped_state.data=}\")\n"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 231,
-   "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
+    "collapsed": false
    }
   }
  ],
