fix: add diverse changes for state_machine

--- a/autora/cycle/state_machine.ipynb
+++ b/autora/cycle/state_machine.ipynb
@@ -2,6 +2,13 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
    "source": [
     "# State machine proof of concept"
    ],
@@ -11,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 69,
    "outputs": [],
    "source": [
     "import copy\n",
@@ -36,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 70,
    "outputs": [],
    "source": [
     "@dataclass(frozen=True)\n",
@@ -58,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 71,
    "outputs": [],
    "source": [
     "class TransitionCondition(Protocol):\n",
@@ -84,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 72,
    "outputs": [],
    "source": [
     "class TransitionCallback(Protocol):\n",
@@ -110,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 73,
    "outputs": [],
    "source": [
     "@dataclass(frozen=True)\n",
@@ -136,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 74,
    "outputs": [],
    "source": [
     "@dataclass(frozen=True)\n",
@@ -169,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 75,
    "outputs": [],
    "source": [
     "@dataclass\n",
@@ -239,13 +246,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 76,
    "outputs": [
     {
      "data": {
-      "text/plain": "StateMachine(states=[State(name='start'), State(name='end')], transitions=[Transition(name='start-end', state1=State(name='start'), state2=State(name='end'), allowed=<function default_transition_condition at 0x1600295a0>, callback=<function default_transition_callback at 0x16002a050>)], current_state=State(name='start'), data=ImmutableData())"
+      "text/plain": "StateMachine(states=[State(name='start'), State(name='end')], transitions=[Transition(name='start-end', state1=State(name='start'), state2=State(name='end'), allowed=<function default_transition_condition at 0x108b8e290>, callback=<function default_transition_callback at 0x108b8e5f0>)], current_state=State(name='start'), data=ImmutableData())"
      },
-     "execution_count": 252,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,6 +262,7 @@
     "\n",
     "start = State(\"start\")\n",
     "end = State(\"end\")\n",
+    "\n",
     "trivial_machine.register_state(start)\n",
     "trivial_machine.register_state(end)\n",
     "\n",
@@ -279,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 77,
    "outputs": [
     {
      "name": "stdout",
@@ -307,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 78,
    "outputs": [
     {
      "name": "stdout",
@@ -336,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 79,
    "outputs": [
     {
      "name": "stdout",
@@ -368,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 80,
    "outputs": [],
    "source": [
     "machine = StateMachine()"
@@ -388,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 81,
    "outputs": [],
    "source": [
     "state_new_theory = State(\"new_theory\")\n",
@@ -414,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 82,
    "outputs": [],
    "source": [
     "transition_theorist = Transition(\n",
@@ -452,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 83,
    "outputs": [],
    "source": [
     "machine.set_current_state(state_new_experiment)"
@@ -472,13 +480,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 84,
    "outputs": [
     {
      "data": {
-      "text/plain": "StateMachine(states=[State(name='new_theory'), State(name='new_experiment'), State(name='new_data')], transitions=[Transition(name='theorist', state1=State(name='new_data'), state2=State(name='new_theory'), allowed=<function default_transition_condition at 0x1600295a0>, callback=<function default_transition_callback at 0x16002a050>), Transition(name='experimentalist', state1=State(name='new_theory'), state2=State(name='new_experiment'), allowed=<function default_transition_condition at 0x1600295a0>, callback=<function default_transition_callback at 0x16002a050>), Transition(name='experiment_runner', state1=State(name='new_experiment'), state2=State(name='new_data'), allowed=<function default_transition_condition at 0x1600295a0>, callback=<function default_transition_callback at 0x16002a050>)], current_state=State(name='new_experiment'), data=ImmutableData())"
+      "text/plain": "StateMachine(states=[State(name='new_theory'), State(name='new_experiment'), State(name='new_data')], transitions=[Transition(name='theorist', state1=State(name='new_data'), state2=State(name='new_theory'), allowed=<function default_transition_condition at 0x108b8e290>, callback=<function default_transition_callback at 0x108b8e5f0>), Transition(name='experimentalist', state1=State(name='new_theory'), state2=State(name='new_experiment'), allowed=<function default_transition_condition at 0x108b8e290>, callback=<function default_transition_callback at 0x108b8e5f0>), Transition(name='experiment_runner', state1=State(name='new_experiment'), state2=State(name='new_data'), allowed=<function default_transition_condition at 0x108b8e290>, callback=<function default_transition_callback at 0x108b8e5f0>)], current_state=State(name='new_experiment'), data=ImmutableData())"
      },
-     "execution_count": 260,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -501,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 85,
    "outputs": [
     {
      "name": "stdout",
@@ -549,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 86,
    "outputs": [],
    "source": [
     "machine_with_additional_step  = copy.copy(machine)\n",
@@ -579,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 87,
    "outputs": [
     {
      "name": "stdout",
@@ -618,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 88,
    "outputs": [],
    "source": [
     "trivial_machine = StateMachine()\n",
@@ -656,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 89,
    "outputs": [
     {
      "name": "stdout",
@@ -681,12 +689,11 @@
    ],
    "metadata": {
     "collapsed": false
-   },
-   "outputs": []
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 90,
    "outputs": [
     {
      "name": "stdout",
@@ -715,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 91,
    "outputs": [
     {
      "name": "stdout",
@@ -744,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 92,
    "outputs": [
     {
      "name": "stdout",
@@ -782,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 93,
    "outputs": [
     {
      "name": "stdout",
@@ -801,13 +808,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 94,
    "outputs": [
     {
      "data": {
       "text/plain": "PlusMinusMachineData(value=8)"
      },
-     "execution_count": 270,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -822,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 95,
    "outputs": [
     {
      "name": "stdout",
@@ -858,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 96,
    "outputs": [],
    "source": [
     "stopping_machine = StateMachine()\n",
@@ -889,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 97,
    "outputs": [
     {
      "name": "stdout",
@@ -930,7 +937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 98,
    "outputs": [],
    "source": [
     "machine_with_stopped_state = StateMachine()\n",
@@ -967,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 99,
    "outputs": [
     {
      "name": "stdout",
