--- a/example/weber_bms.ipynb
+++ b/example/weber_bms.ipynb
@@ -28,7 +28,7 @@
     "import matplotlib.pyplot as plt\n",
     "warnings.filterwarnings(\"ignore\")\n",
     "sys.path.append('../')\n",
-    "from autora_bms.skl.bms import BMSRegressor"
+    "from autora.skl.bms import BMSRegressor"
    ]
   },
   {
