refactor: update jupyter notebook to use new Pipeline / make_pipeline syntax

--- a/example/pipeline/Experimentalist Pipeline Examples.ipynb
+++ b/example/pipeline/Experimentalist Pipeline Examples.ipynb
@@ -13,8 +13,8 @@
     "from functools import partial\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from autora.variable import DV, IV, ValueType, VariableCollection\n",
-    "from autora.experimentalist.pipeline import PoolPipeline\n",
-    "from autora.experimentalist.pool import gridsearch_pool\n",
+    "from autora.experimentalist.pipeline import make_pipeline\n",
+    "from autora.experimentalist.pool import grid_pool\n",
     "from autora.experimentalist.filter import weber_filter\n",
     "from autora.experimentalist.sampler import random_sampler, uncertainty_sampler"
    ],
@@ -29,11 +29,11 @@
    "cell_type": "markdown",
    "source": [
     "# Introduction\n",
-    "This notebook demonstrates the use of the `PoolPipeline` class to create Experimentalists. Experimentalists consist of two main components:\n",
+    "This notebook demonstrates the use of the `Pipeline` class to create Experimentalists. Experimentalists consist of two main components:\n",
     "1. Condition Generation - Creating combinations of independent variables to test\n",
     "2. Experimental Design - Ensuring conditions meet design constraints.\n",
     "\n",
-    "The `PoolPipeline` class allows us to define a series of functions to generate and process a pool of conditions that conform to an experimental design.\n"
+    "The `Pipeline` class allows us to define a series of functions to generate and process a pool of conditions that conform to an experimental design.\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -50,20 +50,15 @@
     "The `PoolPipeline` class consists of two types of inputs:\n",
     "1. Pool - A pool of conditions or a function to generate it.\n",
     "2. Pipes - An arbitrary number of filter functions to apply to the pool.\n",
-    "    * Examples of pipes may be samplers, conditional filters, and sequencers.\n",
-    "\n",
-    "<blockquote>\n",
+    "   * Examples of pipes may be samplers, conditional filters, and sequencers.\n",
     "\n",
     "```Python\n",
     "# Initialize the Pipeline\n",
-    "pipeline = PoolPipeline(Pool, *Pipes)\n",
+    "pipeline = make_pipeline([Pool, *Pipes])\n",
     "\n",
     "# Run the pipeline\n",
     "conditions = pipline.run()\n",
-    "```\n",
-    "</blockquote>\n",
-    "\n",
-    "\n"
+    "```"
    ],
    "metadata": {
     "collapsed": false,
@@ -154,15 +149,16 @@
    "source": [
     "## Set up pipeline functions with the partial function\n",
     "# Pool Function\n",
-    "pooler_callable = partial(gridsearch_pool, ivs=metadata.independent_variables)\n",
+    "pooler_callable = partial(grid_pool, ivs=metadata.independent_variables)\n",
     "# Random Sampler\n",
     "sampler = partial(random_sampler, n=10)\n",
     "\n",
     "# Initialize the pipeline\n",
-    "pipeline_random_samp = PoolPipeline(\n",
+    "pipeline_random_samp = make_pipeline([\n",
     "    pooler_callable,\n",
     "    weber_filter, # Filter that selects conditions with IV1 <= IV2\n",
-    "    sampler,\n",
+    "    sampler\n",
+    "],\n",
     ")"
    ],
    "metadata": {
@@ -244,13 +240,15 @@
    "source": [
     "## Set up pipeline functions with the partial function\n",
     "# Pool Function\n",
-    "pooler_iterator = gridsearch_pool(metadata.independent_variables)\n",
+    "pooler_iterator = grid_pool(metadata.independent_variables)\n",
     "\n",
     "# Initialize the pipeline\n",
-    "pipeline_random_samp2 = PoolPipeline(\n",
-    "    pooler_iterator,\n",
-    "    weber_filter, # Filter that selects conditions with IV1 <= IV2\n",
-    "    sampler, # Sampler defined in the first implementation example\n",
+    "pipeline_random_samp2 = make_pipeline(\n",
+    "    [\n",
+    "        pooler_iterator,\n",
+    "        weber_filter, # Filter that selects conditions with IV1 <= IV2\n",
+    "        sampler # Sampler defined in the first implementation example\n",
+    "    ]\n",
     ")\n",
     "# Run the Pipeline\n",
     "results1 = pipeline_random_samp2.run()\n",
@@ -343,15 +341,15 @@
    "source": [
     "# Set up pipeline functions with the partial function\n",
     "# Pool Function\n",
-    "pooler_callable = partial(gridsearch_pool, ivs=metadata.independent_variables)\n",
+    "pooler_callable = partial(grid_pool, ivs=metadata.independent_variables)\n",
     "# Uncertainty Sampler\n",
     "sampler = partial(uncertainty_sampler, model=logireg_model, n=10, measure='least_confident')\n",
     "\n",
     "# Initialize pipeline\n",
-    "pipeline_uncertainty_samp = PoolPipeline(\n",
-    "    pooler_callable,\n",
+    "pipeline_uncertainty_samp = make_pipeline(\n",
+    "    [pooler_callable,\n",
     "    weber_filter, # Filter that selects conditions with IV1 <= IV2\n",
-    "    sampler,\n",
+    "    sampler]\n",
     ")"
    ],
    "metadata": {
