docs: revert changs to pipeline example

--- a/example/pipeline/Experimentalist Pipeline Examples.ipynb
+++ b/example/pipeline/Experimentalist Pipeline Examples.ipynb
@@ -54,10 +54,10 @@
     "\n",
     "```Python\n",
     "# Initialize the Pipeline\n",
-    "pipeline = make_pipeline([Pool, *Pipes])\n",
+    "pipeline = make_pipeline([Pool, *Pipe])\n",
     "\n",
     "# Run the pipeline\n",
-    "conditions = pipline.run()\n",
+    "conditions = pipeline.run()\n",
     "```"
    ],
    "metadata": {
